# dex_gartherer_V1

./: Cargo.toml  README.md  build_log.txt  check_errors.txt  config.toml  consolidate_matcha.py  errors.txt  errors_utf8.txt  matcha_tokens.json  matcha_tokens_consolidated.json  token_addresses.json
data/pools/: 0G_2025-12-29.json  0G_2025-12-30.json  1INCH_2025-12-29.json  1INCH_2025-12-30.json  2Z_2025-12-29.json  2Z_2025-12-30.json  AAVE_2025-12-29.json  AAVE_2025-12-30.json  ADA_2025-12-29.json  ADA_2025-12-30.json  AERGO_2025-12-29.json  AERGO_2025-12-30.json  AERO_2025-12-29.json  AERO_2025-12-30.json  AGLD_2025-12-29.json  AGLD_2025-12-30.json  AHT_2025-12-29.json  AHT_2025-12-30.json  AKT_2025-12-29.json  AKT_2025-12-30.json  ALGO_2025-12-29.json  ALGO_2025-12-30.json  ALT_2025-12-29.json  ALT_2025-12-30.json  ANIME_2025-12-29.json  ANIME_2025-12-30.json  ANKR_2025-12-29.json  ANKR_2025-12-30.json  API3_2025-12-29.json  API3_2025-12-30.json  APT_2025-12-29.json  APT_2025-12-30.json  AQT_2025-12-29.json  AQT_2025-12-30.json  ARB_2025-12-29.json  ARB_2025-12-30.json  ARDR_2025-12-29.json  ARDR_2025-12-30.json  ARKM_2025-12-29.json  ARKM_2025-12-30.json  (+485 more)
data/snapshots/: full_2025-12-29T11-56.json  full_2025-12-29T12-00.json  full_2025-12-29T12-03.json  full_2025-12-29T15-56.json  full_2025-12-29T15-57.json  full_2025-12-29T16-29.json  full_2025-12-29T16-30.json  full_2025-12-29T16-32.json  full_2025-12-29T16-33.json  full_2025-12-29T16-35.json  full_2025-12-29T16-37.json  full_2025-12-29T16-38.json  full_2025-12-29T16-40.json  (+373 more)
frontend/: index.html
src/: config.rs  main.rs
src/api/: mod.rs  (+2 more)
upbit_matcha_tokens_2025-12-30T01-58-55/: _STATISTICS.txt
(+478 files in other folders)
