[package]
name = "dex-gatherer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = { version = "0.3", features = ["std"] }
tower-http = { version = "0.5", features = ["cors"] }
async-trait = "0.1"
indicatif = "0.17"
parking_lot = "0.12"

[profile.release]
lto = "thin"
codegen-units = 4
opt-level = 2
panic = "abort"
strip = true
